#       deleted:    mgd/PRB_Strain_MultNoAlleles.sql
#       deleted:    mgd/PRB_Strain_NoAlleles1.sql
#       deleted:    mgd/PRB_Strain_NomenSyns.py
#       deleted:    mgd/PRB_Strain_OtherSyns.py
#       deleted:    mgd/PRB_Strain_SingleNoAlleles1.sql
#       deleted:    mgd/PRB_Strain_SingleNoAlleles2.sql
#       deleted:    mgd/PRB_Strain_Standard.sql

TAG: qcreports_db-6-0-23-3
DATE: 02/27/2024
STAFF: lec
wts2-1412/fl2-758/retire WF_GXD_secondary.rpt QC
#       deleted:    weekly/WF_GXD_secondary.py

TAG: qcreports_db-6-0-23-2
DATE: 02/01/2024
STAFF: lec
wts2-1382/fl2-717/add relevance
wts2-1381/fl2-721/New QC report: New PubMed2Gene References for markers with no literature MP annot.
#       new file:   mgd/ALL_PM2GeneNoMP.py
#       modified:   mgd/GO_PM2GeneRefsNotInMGI.py

TAG: qcreports_db-6-0-23-1
DATE: 01/31/2024
STAFF: lec
#       modified:   mgd/VOC_InvalidProperties.py
fix bug

TAG: qcreports_db-6-0-22-76
DATE: 01/30/2024
STAFF: lec
wts2-1390/fl2-712/Custom report for batch allele retrieval
(qcreports/pwi/ALL_CheckByCreationDate.py)

TAG: qcreports_db-6-0-22-75
DATE: 12/05/2023
STAFF: sc
New report: weekly/HOM_MouseNoHuman.py

TAG: qcreports_db-6-0-22-74
DATE: 11/30/2023
STAFF: dbm
qcr.shtml: remove link to arrayexpload (retired)

TAG: qcreports_db-6-0-22-73
DATE: 11/28/2023
STAFF: lec
wts2-1343/fl2-653/Custom GXD report for highlight

TAG: qcreports_db-6-0-22-72
DATE: 11/21/2023
STAFF: lec
wts2-1342/fl2-649/one more for the PRB_Reference.sql.rpt/rename it

TAG: qcreports_db-6-0-22-70
DATE: 11/14/2023
STAFF: dbm
qcr.shtml: remove link to genmapload (retired)

TAG: qcreports_db-6-0-22-71
TAG: qcreports_db-6-0-22-69
DATE: 11/13/2023
STAFF: lec
wts2-1331/fl2-637/Update Images QC
#       modified:   mgd/GXD_Images.py

TAG: qcreports_db-6-0-22-68
DATE: 11/13/2023
STAFF: lec
wts2-1330/fl2-636/Duplicate RNAscope Probes (Mm-%)
#       modified:   monthly/PRB_Reference.sql

TAG: qcreports_db-6-0-22-67
TAG: qcreports_db-6-0-22-66
DATE: 11/09/2023
STAFF: lec